# mcp-cybersec-watchdog

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  REFACTORING.md  RELEASE_PROCESS.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  setup-sudo.sh  test_audit.py  test_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  coverage.yml  publish.yml  test.yml
examples/: report-excellent.json
src/mcp_security/: audit.py  server.py
src/mcp_security/analyzers/: cis.py  containers.py  cve.py  disk.py  docker_sec.py  fail2ban.py  filesystem.py  firewall.py  kernel.py  mac.py  network.py  nist.py  pci.py  rootkit.py  services.py  ssh.py  ssl.py  sudoers.py  threats.py  updates.py  users.py  webheaders.py
src/mcp_security/monitoring/: manager.py
src/mcp_security/utils/: analyzer_registry.py  command.py  detect.py  permissions.py  privacy.py
tests/: __init__.py  test_config.py
